--- a/PearlCalculatorCP/Assets/i18n/zh_cn.json
+++ b/PearlCalculatorCP/Assets/i18n/zh_cn.json
@@ -75,6 +75,7 @@
     "Credit": "特别感谢 : 来自 Mojang 的\"优质\"代码",
 
     "AppSettings": "设置",
+    "MCVersion":  "MC版本", 
     "SetDefaultSettings": "默认加载配置",
     "GithubLink": "Github",
     "About": "关于",
